Improve C2D: upload CV now confirms matches and lets the user edit.

--- a/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
@@ -28,12 +28,16 @@ uploadLattesCV.field.type.book = Book
 uploadLattesCV.field.type.bookchapter = Chapter
 uploadLattesCV.field.type.conferencepaper = Conference
 uploadLattesCV.field.type.journalpaper = Journal
+uploadLattesCV.field.venueString = Declared Venue
+uploadLattesCV.field.venue = Known Venue
 uploadLattesCV.field.year = Year
 uploadLattesCV.form.upload = Lattes CV upload
 uploadLattesCV.text.instructions.confirm = Please review the publications extracted from the uploaded CV and confirm you wish to assign them to {0}. Note that all publications currently assigned to this researcher will be deleted and replaced by the ones below. This researcher currently has {1,choice,0#no publications|1#one publication|1<{1,number,integer} publications} and will have {2,choice,0#no publications|1#one publication|1<{2,number,integer} publications}.
-uploadLattesCV.text.instructions.success = Successfully assigned {0,choice,0#no publications|1#one publication|1<{0,number,integer} publications} to {1}. Any previously assigned publications were deleted.  
+uploadLattesCV.text.instructions.match = Successfully assigned {0,choice,0#no publications|1#one publication|1<{0,number,integer} publications} to {1}. Any previously assigned publications were deleted. There was an attempt to match the papers with known venues. Please review, change and confirm to save the matches.  
+uploadLattesCV.text.instructions.success = Successfully assigned and matched {0,choice,0#no publications|1#one publication|1<{0,number,integer} publications} to {1}.  
 uploadLattesCV.text.instructions.upload = Upload the XML version of a Lattes CV for one of the researchers registered in the system. You can obtain the XML CV by opening the researcher's Lattes CV and, after passing through the captcha, clicking on the XML button at the top of the page.
 uploadLattesCV.text.noPublications = No publications were found in the uploaded CV.
+uploadLattesCV.text.noVenue = (No venue matched)
 uploadLattesCV.title = Upload Lattes CV
 uploadLattesCV.title.description = Extract research information on the academic automatically from their Lattes curriculum.
 
