Add Interest Subjects and Seminars front-end

--- a/src/br/ufes/inf/nemo/marvin/sae/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/sae/view/messages.properties
@@ -17,6 +17,8 @@ core.menu.sae.manageAlumniHistories = Manage Alumni Histories
 core.menu.sae.manageEducations = Manage Educations
 core.menu.sae.manageStatements = Manage Statements
 core.menu.sae.manageSuggestions = Manage Suggestions
+core.menu.sae.manageInterestSubjects = Manage Interest Subjects
+core.menu.sae.manageSeminars = Manage Seminars
 
 # Text for use case "Manage Alumnis":
 manageAlumnis.form.title = Alumni form
@@ -108,64 +110,46 @@ manageSuggestions.title.update.description = Modify an existing suggestion's inf
 manageSuggestions.title.retrieve = Suggestion's data
 manageSuggestions.title.retrieve.description = View an existing suggestion's information
 
-# Text for use case "Manage Course Attendances":
-manageCourseAttendances.button.addAttendance = Add Attendance
-manageCourseAttendances.button.finalizeAttendance = Finalize Attendance
-manageCourseAttendances.form.title = Course Attendance registration form
-manageCourseAttendances.field.startDate = Started at
-manageCourseAttendances.field.endDate = Ended at
-manageCourseAttendances.field.courseName = Course Name
-manageCourseAttendances.field.courseCode = Course Code
-manageCourseAttendances.field.courseStudent = Course Student
-manageCourseAttendances.field.courseSituation = Course Situation
-manageCourseAttendances.field.courseStudent.placeholder = Name of the Course Student
-manageCourseAttendances.field.situation = Situation
-manageCourseAttendances.text.disableSucceeded = Successfully disabled {0,choice,0#no course attendances|1#one course attendance|1<{0,number,integer} course attendances}
-manageCourseAttendances.text.filter.byName = Filter by name:
-manageCourseAttendances.text.noEntities = No Course Attendances registered yet
-manageCourseAttendances.text.noEntitiesFiltered = No course attendance found for this filter
-manageCourseAttendances.text.selectCourse = Select a Course
-manageCourseAttendances.text.selectStudent = Select a Student
-manageCourseAttendances.text.selectSituation = Select the Reason
-manageCourseAttendances.text.situation = Select the reason to disable the academic(s):
-manageCourseAttendances.text.noCourses = No Courses registered yet
-manageCourseAttendances.text.noSituations = No Situations registered yet
-manageCourseAttendances.text.noStudents = No Students without attendance
-manageCourseAttendances.title = Manage Course Attendances
-manageCourseAttendances.title.description = Create, retrieve and disable data about course attendances
-manageCourseAttendances.title.create = Register new Course Attendance
-manageCourseAttendances.title.create.description = Insert new course attendance information
-manageCourseAttendances.title.retrieve = Course Attendance's data
-manageCourseAttendances.title.retrieve.description = View an existing course attendances's information
-manageCourseAttendances.title.courseAttendance = Course Attendance
-manageCourseAttendances.title.description.courseAttendance = Add or finalize a attendance on a course attendance
+# Text for use case "Manage Interest Subjects":
+manageInterestSubjects.form.title = Interest Subjects registration form
+manageInterestSubjects.field.name = Name
+manageInterestSubjects.field.creationDate = Created at
+manageInterestSubjects.field.lastUpdateDate = Updated at
+manageInterestSubjects.text.deleteSucceeded = Successfully deleted {0,choice,0#no interest subjects|1#one interest subject|1<{0,number,integer} interest subjects}
+manageInterestSubjects.text.filter.byName = Filter by name:
+manageInterestSubjects.text.noEntities = No Interest Subjects registered yet
+manageInterestSubjects.text.noEntitiesFiltered = No Interest Subjects found for this filter
+manageInterestSubjects.title = Manage Interest Subjects
+manageInterestSubjects.title.description = Create, retrieve and delete data about interest subjects
+manageInterestSubjects.title.create = Register new Interest Subject
+manageInterestSubjects.title.create.description = Insert new interest subject information
+manageInterestSubjects.title.update = Update Interest Subject
+manageInterestSubjects.title.update.description = Modify an existing interest subject's information
+manageInterestSubjects.title.retrieve = Interest Subject's data
+manageInterestSubjects.title.retrieve.description = View an existing interest subject's information
 
-
-# Text for use case "Change Password":
-changePassword.button.change = Change password
-changePassword.button.new = Set new password
-changePassword.button.reset = Request reset link
-changePassword.error.operationFailed.summary = Error while changing password.
-changePassword.error.operationFailed.detail = A failure during the operation has prevented the password change. Please, contact Marvin's support.
-changePassword.error.passwordsDontMatch.summary = Attention: passwords don't match.
-changePassword.error.passwordsDontMatch.detail = Please, make sure you typed the same password in both fields.
-changePassword.field.email = E-mail
-changePassword.field.password = Password
-changePassword.field.repeatPassword = Confirm the password
-changePassword.form.new = Set a new password for 
-changePassword.message.resetRequested.summary = Reset password requested
-changePassword.message.resetRequested.detail = If the address {0} is registered in the system, an e-mail will be sent to that address with a link to set a new password.
-changePassword.text.done = The new password has been set. You can log in now.
-changePassword.text.instructions.new = {0}, please type the same password in both fields below and click the button to set it as your new password.
-changePassword.text.instructions.reset = Fill in below the e-mail used in your Marvin registration in order to get a link that allows you to change your password.
-changePassword.text.invalidCode = Sorry, this is not a valid code: {0}
-changePassword.title = Change Password
-changePassword.title.reset = Reset Password
-changePassword.title.description = Set a new password for your Marvin account
-
-# Text for use case "Edit Profile":
-editProfile.field.name = Name
-editProfile.form.password.title = Change password
-editProfile.form.profile.title = Edit personal information
-editProfile.title = Edit Profile
-editProfile.title.description = Edit your personal information, change your password, etc.
+# Text for use case "Manage Seminars":
+manageSeminars.form.title = Interest Subjects registration form
+manageSeminars.field.seminarTitle = Title
+manageSeminars.field.date = Date
+manageSeminars.field.speakerName = Speaker Name
+manageSeminars.field.location = Location
+manageSeminars.field.interestSubject = Interest Subject
+manageSeminars.field.confirmed = Confirmed?
+manageSeminars.field.creationDate = Created at
+manageSeminars.field.lastUpdateDate = Updated at
+manageSeminars.field.subject = Seminar's Subject
+manageSeminars.text.noInterestSubjects = No Interest Subjects registered yet
+manageSeminars.text.selectInterestSubject = Select an Interest Subject
+manageSeminars.text.deleteSucceeded = Successfully deleted {0,choice,0#no seminars|1#one seminar|1<{0,number,integer} seminars}
+manageSeminars.text.filter.byName = Filter by name:
+manageSeminars.text.noEntities = No Seminars registered yet
+manageSeminars.text.noEntitiesFiltered = No Seminars found for this filter
+manageSeminars.title = Manage Seminars
+manageSeminars.title.description = Create, retrieve and delete data about seminars
+manageSeminars.title.create = Register new Seminar
+manageSeminars.title.create.description = Insert new seminar information
+manageSeminars.title.update = Update Seminar
+manageSeminars.title.update.description = Modify an existing seminar's information
+manageSeminars.title.retrieve = Seminar's data
+manageSeminars.title.retrieve.description = View an existing seminar's information
