- Add Javadoc of Core and Sae

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -108,6 +108,7 @@ manageAcademics.title.retrieve.description = View an existing academic's informa
 
 # Text for use case "Manage Courses":
 manageCourses.error.deleteCourseWithCoordination = Cannot delete course {0}: course has links with coordinations
+manageCourses.error.deleteCourseWithAttendance = Cannot delete course {0}: course has links with attendances
 manageCourses.form.title = Course registration form
 manageCourses.field.creationDate = Created at
 manageCourses.field.lastLoginDate = Last login at
